Centered and aligned text, modified text transition correctly

--- a/src/assets/styles.css
+++ b/src/assets/styles.css
@@ -15,6 +15,7 @@ body {
     font-family: 'Press Start 2P', cursive;
 
 }
+
 .home-bg {
     /* background-image: url(/src/assets/RPG\ MAKER\ WEB\ BACKGROUND\ 4.png); */
     background-image: url(/src/assets/RPG\ MAKER\ WEB\ BACKGROUND\ 4.png);
@@ -28,27 +29,35 @@ body {
 
 .active {
     @apply bg-green-400 bg-opacity-50;
-   
+
 }
 
 
 /* Typewriter effect */
 
 .typewriter p {
-  overflow: hidden; /* Ensures the content is not revealed until the animation */
-  white-space: nowrap; /* Keeps the content on a single line */
-  letter-spacing: .15em; /* Adjust as needed */
-  animation: 
-    typing 3.5s steps(30, end),
-    blink-caret .5s step-end infinite;
-    
-  
+    overflow: hidden;
+    /* Ensures the content is not revealed until the animation */
+    white-space: nowrap;
+    /* Keeps the content on a single line */
+    letter-spacing: .15em;
+    /* Adjust as needed */
+    animation:
+        typing 3.5s steps(30, end),
+        blink-caret .5s step-end infinite;
+
+
 }
 
 /* The typing effect */
 @keyframes typing {
-  from { width: 0 }
-  to { width: 100% }
+    from {
+        width: 0
+    }
+
+    to {
+        width: 100%
+    }
 }
 
 
@@ -64,18 +73,18 @@ body {
 @media (min-width: 1280px) {
 
     html,
-body {
-    height: 100%;
-    font-family: 'Press Start 2P', cursive;
-    
-    
-}
+    body {
+        height: 100%;
+        font-family: 'Press Start 2P', cursive;
 
-    .grid { 
+
+    }
+
+    .grid {
         grid-template-columns: repeat(3, 1fr);
         grid-gap: 5px;
-        
-        
+
+
 
 
     }
@@ -142,15 +151,15 @@ div:hover:after {
 
 /* Ipad responsive */
 
-@media screen and (max-width: 1279px) and (min-width: 800px){
+@media screen and (max-width: 1279px) and (min-width: 800px) {
 
     html,
-body {
-    height: 100%;
-    font-family: 'Press Start 2P', cursive;
-    
-    
-}
+    body {
+        height: 100%;
+        font-family: 'Press Start 2P', cursive;
+
+
+    }
 
     body {
         /* background-image: url(/src/assets/RPG\ MAKER\ WEB\ BACKGROUND\ 4.png); */
@@ -241,8 +250,8 @@ body {
     body {
         height: 100%;
         font-family: 'Press Start 2P', cursive;
-        
-        
+
+
     }
 
     body {
@@ -335,40 +344,52 @@ body {
 /* GAMEOVER SCREEN */
 .gameover-bg {
     color: #fff;
-	background: #000;
+    background: #000;
 
 }
 
 .go-text-container {
     transform: scale(0.94);
     animation: scale 1s forwards cubic-bezier(0.5, 1, 0.89, 1);
-  }
-  @keyframes scale {
+}
+
+@keyframes scale {
     100% {
-      transform: scale(1);
+        transform: scale(1);
     }
-  }
-  
-  .text-game {
+}
+
+.text-game {
     opacity: 0;
     filter: blur(4px);
-  }
-  
-  span:nth-child(1) {
+}
+
+
+.col-1-gameover span:nth-child(1) {
     animation: fade-in 0.8s 0.1s forwards cubic-bezier(0.11, 0, 0.5, 0);
-  }
-  
-  span:nth-child(2) {
-    animation: fade-in 0.8s 0.2s forwards cubic-bezier(0.11, 0, 0.5, 0);
-  }
-  
-  span:nth-child(3) {
-    animation: fade-in 0.8s 5.6s forwards cubic-bezier(0.11, 0, 0.5, 0);
-  }
-  
-  span:nth-child(4) {
-    animation: fade-in 0.8s 5.7s forwards cubic-bezier(0.11, 0, 0.5, 0);
-  }
+}
+
+.col-1-gameover span:nth-child(2) {
+    animation: fade-in 0.8s .2s forwards cubic-bezier(0.11, 0, 0.5, 0);
+}
+
+
+.col-2-gameover span:nth-child(1) {
+    animation: fade-in 5.8s 1.6s forwards cubic-bezier(0.11, 0, 0.5, 0);
+}
+
+.col-2-gameover span:nth-child(2) {
+    animation: fade-in 5.8s 1.7s forwards cubic-bezier(0.11, 0, 0.5, 0);
+}
+
+
+
+
+
+
+
+
+
 /*   
   span:nth-child(5) {
     animation: fade-in 0.8s 0.5s forwards cubic-bezier(0.11, 0, 0.5, 0);
@@ -426,9 +447,9 @@ body {
     animation: fade-in 0.8s 1.8s forwards cubic-bezier(0.11, 0, 0.5, 0);
   }
    */
-  @keyframes fade-in {
+@keyframes fade-in {
     100% {
-      opacity: 1;
-      filter: blur(0);
+        opacity: 1;
+        filter: blur(0);
     }
-  }
+}
